2007-12-21  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c (gimp_ink_motion): applied patch from Alexia
	Death that fixes Ink tool speed calculation when using a tablet
	(bug #504711).

2007-12-19  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:

	* plug-ins/script-fu/tinyscheme/scheme.c: Added extra checks to stop
	bad syntax in LET*, LET, and LETREC from causing a segmentation fault
	in Linux. See SourceForge bug #1817986.

2007-12-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/psd-load.c: applied patch from John Marshall
	that fixes handling of PSD files with blank layer names (bug #504149).

2007-12-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* libgimpwidgets/gimpstock.h:  fix typo.

2007-12-16  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.4 (interface age 4).

2007-12-16  Sven Neumann  <sven@gimp.org>

	* Made 2.4.3 release.

2007-12-13  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* libgimpbase/gimpenv.c (gimp_toplevel_directory) [Win32]: Use
	the location of the libgimpbase DLL and not that of the main
	executable (which will be the Python interpreter in the case of
	python-fu) to determine the top-level GIMP installation
	folder. (#502506)

2007-12-12  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/base/tile-private.h
        * app/base/tile-swap.c: Move the LARGE_SEEK and LARGE_TRUNCATE
        macros from tile-private.h to tile-swap.c as they aren't used
        anywhere else, and the helper function used on Windows was static
        in tile-swap.c anyway. (#503124)

2007-12-11  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:

	* plug-ins/script-fu/tinyscheme/scheme.c (get_consecutive_cells):
	Fix to prevent reporting out of memory when there should be plenty
	of cells still available. See SourceForge bug #1794369.

2007-12-11  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:
